unpackaged/main/default/objects/Digital_Materials__c/Digital_Materials__c.object-meta.xml
<CustomObject>
    <description>Object used to house digital materials purchased from the store (webinars and PDF)</description>
    <label>Digital Materials</label>
    <nameField>
        <displayFormat>Digital-{000000}</displayFormat>
        <label>Digital Materials Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Digital Materials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>