unpackaged/main/default/objects/Digital_Materials__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <inlineHelpText>Individual who has purchased the digital materials</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Digital Materials</relationshipLabel>
    <relationshipName>Digital_Materials</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>