unpackaged/main/default/objects/Digital_Materials__c/fields/Digital_Item__c.field-meta.xml
<CustomField>
    <fullName>Digital_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Digital Item</label>
    <referenceTo>OrderApi__Item__c</referenceTo>
    <relationshipLabel>Digital Materials</relationshipLabel>
    <relationshipName>Digital_Materials</relationshipName>
    <type>Lookup</type>
</CustomField>