unpackaged/main/default/objects/Digital_Materials__c/fields/Expires_In__c.field-meta.xml
<CustomField>
    <fullName>Expires_In__c</fullName>
    <formula>&#39;&lt;span style=&quot;color: red&quot;&gt;&#39;&amp; IF(NOT(ISBLANK(FON_Start_Date__c)),TEXT(30 + (FON_Start_Date__c - TODAY())),TEXT(30 + (Purchased_Date__c - TODAY()))) &amp; &#39;&lt;/span&gt; day/s&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expires In</label>
    <type>Text</type>
</CustomField>