unpackaged/main/default/objects/Digital_Materials__c/fields/FON_Is_Expired__c.field-meta.xml
<CustomField>
    <fullName>FON_Is_Expired__c</fullName>
    <formula>IF((30 + (Purchased_Date__c - TODAY())) &lt;= 0, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Expired</label>
    <type>Checkbox</type>
</CustomField>