unpackaged/main/default/objects/Digital_Materials__c/fields/FON_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>FON_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>