unpackaged/main/default/objects/Digital_Materials__c/fields/Item_Class__c.field-meta.xml
<CustomField>
    <fullName>Item_Class__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Item Class</label>
    <referenceTo>OrderApi__Item_Class__c</referenceTo>
    <relationshipLabel>Digital Materials</relationshipLabel>
    <relationshipName>Digital_Materials</relationshipName>
    <type>Lookup</type>
</CustomField>