unpackaged/main/default/objects/Digital_Materials__c/fields/Material_URL__c.field-meta.xml
<CustomField>
    <fullName>Material_URL__c</fullName>
    <formula>If(!URL_No_Longer_Valid__c,
Digital_Item__r.Media_Asset__r.PagesApi__Path__c
,
(If( URL_No_Longer_Valid__c,&#39;This digital material is no longer available&#39;,&#39;&#39;) 
))</formula>
    <label>Material URL</label>
    <type>Text</type>
</CustomField>