unpackaged/main/default/objects/Digital_Materials__c/fields/Materials__c.field-meta.xml
<CustomField>
    <fullName>Materials__c</fullName>
    <formula>If(Material_URL__c==&#39;hidethis&#39;,&#39;&lt;a href=&quot;&#39;&amp; Material_URL__c &amp;&#39;&quot; class=&quot;slds-button slds-button_brand&quot; target=&quot;_blank&quot;&gt;Media&lt;/a&gt;&#39;,null)&amp;
If(PDF_URL__c!=null,&#39;&lt;a href=&quot;&#39;&amp; PDF_URL__c &amp;&#39;&quot; class=&quot;slds-button slds-button_brand&quot; target=&quot;_blank&quot;&gt;PDF&lt;/a&gt;&#39;,null)&amp;
If(Digital_Item__r.FON_External_File_URL__c!=null,&#39;&lt;a href=&quot;&#39;&amp; Digital_Item__r.FON_External_File_URL__c &amp;&#39;&quot; class=&quot;slds-button slds-button_brand&quot; target=&quot;_blank&quot;&gt;WebEx&lt;/a&gt;&#39;,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Materials</label>
    <type>Text</type>
</CustomField>