unpackaged/main/default/objects/Digital_Materials__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>Digital_Item__r.OrderApi__Display_Name__c</formula>
    <label>Name</label>
    <type>Text</type>
</CustomField>