unpackaged/main/default/objects/Digital_Materials__c/fields/PDF_URL__c.field-meta.xml
<CustomField>
    <fullName>PDF_URL__c</fullName>
    <formula>If(!URL_No_Longer_Valid__c,Digital_Item__r.Media_Asset__r.PagesApi__Path__c,
(If( URL_No_Longer_Valid__c,&#39;This digital material is no longer available&#39;,&#39;&#39;)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PDF URL</label>
    <type>Text</type>
</CustomField>