unpackaged/main/default/objects/Digital_Materials__c/fields/Purchase_Date_Formatted__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Date_Formatted__c</fullName>
    <formula>IF(MONTH( Purchased_Date__c ) &lt; 10, &#39;0&#39;&amp;TEXT(MONTH( Purchased_Date__c )), TEXT(MONTH( Purchased_Date__c ))) &amp;&#39;-&#39;&amp;IF(DAY( Purchased_Date__c ) &lt; 10, &#39;0&#39;&amp;TEXT(DAY( Purchased_Date__c )), TEXT(DAY( Purchased_Date__c )))&amp;&#39;-&#39;&amp;TEXT(YEAR( Purchased_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Date</label>
    <type>Text</type>
</CustomField>