unpackaged/main/default/objects/Digital_Materials__c/fields/Purchased_Date__c.field-meta.xml
<CustomField>
    <fullName>Purchased_Date__c</fullName>
    <formula>Receipt_Line__r.OrderApi__Receipt__r.OrderApi__Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows the date the item was purchased</inlineHelpText>
    <label>Purchased Date</label>
    <type>Date</type>
</CustomField>