unpackaged/main/default/objects/Digital_Materials__c/fields/Receipt_Line__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Line__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Receipt Line</label>
    <referenceTo>OrderApi__Receipt_Line__c</referenceTo>
    <relationshipLabel>Digital Materials</relationshipLabel>
    <relationshipName>Digital_Materials</relationshipName>
    <type>Lookup</type>
</CustomField>