unpackaged/main/default/objects/Digital_Materials__c/fields/URL_No_Longer_Valid__c.field-meta.xml
<CustomField>
    <fullName>URL_No_Longer_Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If a digital download&#39;s information is no longer valid, check this box to make the URL unavailable. Default is unchecked.</inlineHelpText>
    <label>URL No Longer Valid</label>
    <type>Checkbox</type>
</CustomField>