unpackaged/main/default/objects/Digital_Materials__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Digital_Item__c</columns>
    <columns>Expires_In__c</columns>
    <columns>Purchased_Date__c</columns>
    <columns>URL_No_Longer_Valid__c</columns>
    <columns>FON_Is_Expired__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>